<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swiftnav_ros2_driver</name>
  <version>1.0.0</version>
  <description>ROS 2 driver for Swift Navigation's GNSS/INS receivers and Starling Positioning Engine software.</description>
  <maintainer email="support@swiftnav.com">Swift Navigation</maintainer>
  <license>MIT</license>
  <license file="LICENSE">MIT License File</license>
  <url type="website">https://support.swiftnav.com</url>
  <url type="repository">https://github.com/swift-nav/swiftnav-ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>tf2</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
